--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,8 +1,8 @@
-header {
-    background-color: rgb(150, 150, 240);
+/* header {
+    background-color: rgb(192, 192, 247);
 }
 span {
     display: block;
     text-align: center;
     padding: 10px 0 5px;
-}
+} */
