Fix font-size issues

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 li {
   list-style-type: none;
-  font-size: 1.2em;
+  /* font-size: 1.2em; */
 }
 a {
   text-decoration: none;
@@ -17,8 +17,13 @@ a {
 input, button {
   border-radius: 3px;
   padding: 7px 10px;
-  font-size: 1.2em;
+  font-size: 1em;
 }
+/* @media (min-width: 700px) {
+  * {
+    font-size: 1em;
+  }
+} */
 /* table, th, td {
   border: 1px solid rgb(194, 194, 194);
   border-collapse: collapse;
