--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Poppins', sans-serif;   
@@ -27,10 +26,21 @@ button:hover {
   cursor: pointer;
   background-color: rgb(122, 213, 178);
 }
-table, tr, td {
+/* TODO: change border to only border bottom and add bg-color every-other row? */
+table, th, tr, td {
   border: 1px solid rgb(191, 192, 196);
   border-collapse: collapse;
   padding: 5px 10px;
+}
+th {
+  text-align: center;
+}
+.holes-completed {
+  text-align: center;
+}
+.round-point-total {
+  /* text-align: right; */
+  text-align: center;
 }
 .buttonListItem:hover {
   cursor: pointer;
@@ -41,15 +51,9 @@ table, tr, td {
 }
 .disabledListItem {
   pointer-events: none;
-  opacity: 0.5;        
+  opacity: 0.5;    
 }
-/* @media (min-width: 700px) {
-  * {
-    font-size: 1em;
-  }
-} */
-/* table, th, td {
-  border: 1px solid rgb(194, 194, 194);
-  border-collapse: collapse;
+/* .disabledListItem:hover {     
+  cursor: not-allowed;
 } */
 
