--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,9 @@ input, button {
   padding: 7px 10px;
   font-size: 1em;
 }
+.MuiSelect-root, .MuiInputBase-input {
+  font-size: .75em;
+}
 button {
   border-radius: 3px;
   border: 1px solid rgb(191, 192, 196);
