--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
    */
    font-family: 'Anaheim', sans-serif;
 }
+#page-width-control {
+  padding: 20px 40px;
+  margin: auto 0;
+}
 li {
   list-style-type: none;
 }
@@ -18,9 +22,6 @@ a {
 input, button {
   padding: 7px 10px;
   font-size: 1em;
-}
-.MuiSelect-root, .MuiInputBase-input {
-  font-size: .75em;
 }
 button {
   border-radius: 3px;
