--- a/src/index.css
+++ b/src/index.css
@@ -54,11 +54,9 @@ th {
 .activeListItem {
   background-color: rgb(149, 237, 203);
 }
-.disabledListItem {
+.disabledItem {
   pointer-events: none;
   opacity: 0.5;    
 }
-/* .disabledListItem:hover {     
-  cursor: not-allowed;
-} */
+
 
